# binary-search-bench

./: Cargo.toml  README.md
benches/: compare.rs
src/: lib.rs  main.rs
